--- a/proyecto/src/main/resources/static/cuentas.html
+++ b/proyecto/src/main/resources/static/cuentas.html
@@ -4,38 +4,65 @@
   <meta charset="UTF-8">
   <title>Mis cuentas - SegurBank</title>
   <link rel="stylesheet" href="estilos.css">
-
-  <script defer src="cliente.js"></script>
 </head>
 <body>
   <header>
-    <h1 id="saludo">Bienvenido</h1>
-
+    <h1>Bienvenido a tu espacio personal</h1>
   </header>
 
   <main>
     <section class="cuentas">
       <h2>Tus cuentas activas</h2>
 
-      <table id="tablaCuentas">
-        <thead>
-          <tr>
-            <th>IBAN</th>
-            <th>Saldo</th>
-            <th>Sucursal</th>
-          </tr>
-        </thead>
-        <tbody>
+      <div class="contenedor-scroll">
+        
+        <div class="tarjeta-cuenta">
+          <h3>Cuenta Corriente</h3>
+          <select onchange="location.href=this.value">
+            <option disabled selected>Realizar acciones</option>
+            <option value="bizum.html">Realizar Bizum</option>
+            <option value="transferencia.html">Realizar Transferencia</option>
+          </select>
+        </div>
 
-        </tbody>
-      </table>
+        <div class="tarjeta-cuenta">
+          <h3>Cuenta de Ahorro</h3>
+          <select onchange="location.href=this.value">
+            <option disabled selected>Realizar acciones</option>
+            <option value="bizum.html">Realizar Bizum</option>
+            <option value="transferencia.html">Realizar Transferencia</option>
+          </select>
+        </div>
+
+        <div class="tarjeta-cuenta">
+          <h3>Cuenta Joven</h3>
+          <select onchange="location.href=this.value">
+            <option disabled selected>Realizar acciones</option>
+            <option value="bizum.html">Realizar Bizum</option>
+            <option value="transferencia.html">Realizar Transferencia</option>
+          </select>
+        </div>
+
+        <div class="tarjeta-cuenta">
+          <h3>Cuenta Nómina</h3>
+          <select onchange="location.href=this.value">
+            <option disabled selected>Realizar acciones</option>
+            <option value="bizum.html">Realizar Bizum</option>
+            <option value="transferencia.html">Realizar Transferencia</option>
+          </select>
+        </div>
+
+        <div class="tarjeta-cuenta">
+          <h3>Cuenta Universitaria</h3>
+          <select onchange="location.href=this.value">
+            <option disabled selected>Realizar acciones</option>
+            <option value="bizum.html">Realizar Bizum</option>
+            <option value="transferencia.html">Realizar Transferencia</option>
+          </select>
+        </div>
+
+      </div>
     </section>
   </main>
-
-  <footer>
-    <p>&copy; 2025 RoyaleBank - Todos los derechos reservados</p>
-  </footer>
-
 </body>
 </html>
-
