--- a/proyecto/src/main/resources/static/cuentas.html
+++ b/proyecto/src/main/resources/static/cuentas.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mis cuentas - SegurBank</title>
+  <title>Mis cuentas - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
