--- a/proyecto/src/main/resources/static/bizum.html
+++ b/proyecto/src/main/resources/static/bizum.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Enviar Bizum - SegurBank</title>
+  <title>Enviar Bizum - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -29,8 +29,5 @@
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 SegurBank - Todos los derechos reservados</p>
-  </footer>
 </body>
 </html>
