--- a/proyecto/src/main/resources/static/transferecia.html
+++ b/proyecto/src/main/resources/static/transferecia.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Transferencia - SegurBank</title>
+  <title>Transferencia - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
