--- a/proyecto/src/main/resources/static/cuentas.html
+++ b/proyecto/src/main/resources/static/cuentas.html
@@ -21,7 +21,7 @@
           <select onchange="location.href=this.value">
             <option disabled selected>Realizar acciones</option>
             <option value="bizum.html">Realizar Bizum</option>
-            <option value="proyecto/transferencia.html">Realizar Transferencia</option>
+            <option value="transferencia.html">Realizar Transferencia</option>
 
           </select>
         </div>
