--- a/proyecto/src/main/resources/static/bizum.html
+++ b/proyecto/src/main/resources/static/bizum.html
@@ -13,8 +13,8 @@
   <main>
     <section class="formulario">
       <form id="bizumForm">
-        <label for="destinatario">Nombre del destinatario:</label>
-        <input type="text" id="destinatario" name="destinatario" required>
+        <label for="destinatario">Número de telefono del destinatario:</label>
+        <input type="number" id="destinatario" name="destinatario" required>
 
         <label for="cantidad">Cantidad a enviar:</label>
         <div class="campo-euro">
