--- a/proyecto/src/main/resources/static/cuentas.html
+++ b/proyecto/src/main/resources/static/cuentas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Mis cuentas - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
-  <script defer src="cuentas.js"></script>
+  <script defer src="cliente.js"></script>
 </head>
 <body>
   <header>
