--- a/proyecto/src/main/resources/static/bizum.html
+++ b/proyecto/src/main/resources/static/bizum.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Enviar Bizum - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
+  <script defer src="bizum.js"></script>
 </head>
 <body>
   <header>
@@ -24,7 +25,7 @@
 
         <button type="submit">Enviar Bizum</button>
       </form>
-
+      <div id="mensaje" class="mensaje-error" style="color: red; margin-top: 1em;"></div>
       <p><a href="cuentas.html">Volver a mis cuentas</a></p>
     </section>
   </main>
