--- a/proyecto/src/main/resources/static/crearcuenta.html
+++ b/proyecto/src/main/resources/static/crearcuenta.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Crear nueva cuenta - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
+  <script defer src="crearCuenta.js"></script>
 </head>
 <body>
   <header>
@@ -28,7 +29,7 @@
 
         <button type="submit">Crear cuenta</button>
       </form>
-
+      <div id="mensaje" style="color: red; margin-top: 1em;"></div>
       <p><a href="cuentas.html">Volver a mis cuentas</a></p>
     </section>
   </main>
