Frontend y javascript inigo

--- a/proyecto/src/main/resources/static/cuentas.html
+++ b/proyecto/src/main/resources/static/cuentas.html
@@ -32,6 +32,10 @@
     </div>
 
     <button id="btnNuevaCuenta">Crear nueva cuenta</button>
+    <script>document.getElementById("btnNuevaCuenta").addEventListener("click", () => {
+    window.location.href = "crearcuenta.html"; // Cambia por la ruta que necesites
+    });</script>
+
   </section>
 </main>
 </body>
