Frontend y javascript inigo

--- a/proyecto/src/main/resources/static/crearcuenta.html
+++ b/proyecto/src/main/resources/static/crearcuenta.html
@@ -17,9 +17,9 @@
         <label for="sucursal">Sucursal:</label>
         <select id="sucursal" name="sucursal" required>
           <option value="" disabled selected>Selecciona una sucursal</option>
-          <option value="Madrid">Madrid</option>
-          <option value="Barcelona">Barcelona</option>
-          <option value="Bilbao">Bilbao</option>
+          <option value="MADRID">MADRID</option>
+          <option value="BARCELONA">BARCELONA</option>
+          <option value="BILBAO">BILBAO</option>
         </select>
 
         <label for="numeroCuenta">Número de cuenta (10 dígitos):</label>
