--- a/proyecto/src/main/resources/static/cuentaInterfaz.html
+++ b/proyecto/src/main/resources/static/cuentaInterfaz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Detalle de cuenta - RoyaleBank</title>
     <link rel="stylesheet" href="estilos.css">
-    <script defer src="cuentaInterfaz.js.js"></script>
+    <script defer src="cuentaInterfaz.js"></script>
 </head>
 <body>
 <header>
