Frontend y javascript inigo

--- a/proyecto/src/main/resources/static/cuentaInterfaz.html
+++ b/proyecto/src/main/resources/static/cuentaInterfaz.html
@@ -15,7 +15,7 @@
 <main>
     <section class="acciones-cuenta">
         <button id="btnBizum">Enviar Bizum</button>
-        <button id="btnTransacciones">Ver transacciones</button>
+        <button id="btnTransferencias">Ver transacciones</button>
     </section>
 </main>
 </body>
