Frontend y javascript inigo

--- a/proyecto/src/main/resources/static/transferencia.html
+++ b/proyecto/src/main/resources/static/transferencia.html
@@ -30,6 +30,7 @@
         <button type="submit">Enviar transferencia</button>
       </form>
 
+      <div id="mensaje" class="mensaje-error" style="color: red; margin-top: 1em;"></div>
       <p><a href="cuentas.html">Volver a mis cuentas</a></p>
     </section>
   </main>
