--- a/proyecto/src/main/resources/static/transferencia.html
+++ b/proyecto/src/main/resources/static/transferencia.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Transferencia - RoyaleBank</title>
   <link rel="stylesheet" href="estilos.css">
+  <script defer src="transferencia.js"></script>
 </head>
 <body>
   <header>
