Css y otros cambios

--- a/proyecto/src/main/resources/static/cuentas.html
+++ b/proyecto/src/main/resources/static/cuentas.html
@@ -33,7 +33,7 @@
 
     <button id="btnNuevaCuenta">Crear nueva cuenta</button>
     <script>document.getElementById("btnNuevaCuenta").addEventListener("click", () => {
-    window.location.href = "crearcuenta.html"; // Cambia por la ruta que necesites
+    window.location.href = "crearcuenta.html"; 
     });</script>
 
   </section>
